test/JDBC/expected/BABEL-1953-vu-prepare.out
-- Table without table_name
CREATE TABLE (a int)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '(' at line 2 and character position 13)~~


-- Table without a datatype of column
CREATE TABLE BABEL_1953_vu_prepare_t1 (a)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ')' at line 2 and character position 40)~~

CREATE TABLE BABEL_1953_vu_prepare_t2 (a, b int)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ',' at line 1 and character position 40)~~

CREATE TABLE BABEL_1953_vu_prepare_t3 (a int, b)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ')' at line 1 and character position 47)~~


-- Table without table_name and datatype of a column
CREATE TABLE (a)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '(' at line 2 and character position 13)~~


-- Table having datatype mentioned before the column_name
CREATE TABLE BABEL_1953_vu_prepare_t4 (int a)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: type "a" does not exist)~~


-- Table without column_name but datatype
CREATE TABLE BABEL_1953_vu_prepare_t5 (int)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near ')' at line 2 and character position 42)~~

CREATE TABLE BABEL_1953_vu_prepare_t6 (a int, varchar(5))
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '(' at line 1 and character position 53)~~



-- Table_name starting with integers and special characters
CREATE TABLE 1953_vu_prepare_t7 (a int)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '1953' at line 2 and character position 13)~~

CREATE TABLE @ (a int)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '@' at line 1 and character position 13)~~

CREATE TABLE $ (a int)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '$' at line 1 and character position 13)~~


-- Table having integers and special characters as the column name
CREATE TABLE BABEL_1953_vu_prepare_t8 (123a int)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '123' at line 2 and character position 39)~~

CREATE TABLE BABEL_1953_vu_prepare_t9 (@ int)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '@' at line 1 and character position 39)~~

CREATE TABLE BABEL_1953_vu_prepare_t11 ($ int)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '$' at line 1 and character position 40)~~


-- Table without columns
CREATE TABLE BABEL_1953_vu_prepare_t12
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '<EOF>' at line 3 and character position 0)~~

CREATE TABLE BABEL_1953_vu_prepare_t13 ()
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '<EOF>' at line 2 and character position 0)~~


-- Table having same column_name with same datatype and different datatype
CREATE TABLE BABEL_1953_vu_prepare_t14 (a int, a int)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: column "a" specified more than once)~~

CREATE TABLE BABEL_1953_vu_prepare_t15 (a int, int a)
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: type "a" does not exist)~~

CREATE TABLE BABEL_1953_vu_prepare_t16 (a int, a varchar(5))
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: column "a" specified more than once)~~


-- Test on VIEWS
CREATE TABLE BABEL_1953_vu_prepare_t17(a int)
GO
CREATE VIEW 123view AS SELECT * FROM BABEL_1953_vu_prepare_t17
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '123' at line 1 and character position 12)~~

CREATE VIEW @ AS SELECT * FROM BABEL_1953_vu_prepare_t17
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '@' at line 1 and character position 12)~~

CREATE VIEW $ AS SELECT * FROM BABEL_1953_vu_prepare_t17
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error near '$' at line 1 and character position 12)~~

